Se creó con Colab

--- a/1 - Missing Data.ipynb
+++ b/1 - Missing Data.ipynb
@@ -72,11 +72,11 @@
       "execution_count": 5,
       "metadata": {
         "scrolled": true,
-        "id": "uzENHjQmZQzk",
-        "outputId": "828ceaf8-211e-47a8-a542-b4c6ae6a8e94",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "uzENHjQmZQzk",
+        "outputId": "828ceaf8-211e-47a8-a542-b4c6ae6a8e94"
       },
       "outputs": [
         {
@@ -107,11 +107,11 @@
       "cell_type": "code",
       "execution_count": 6,
       "metadata": {
-        "id": "aL3IWZpdZQzm",
-        "outputId": "88fd63e5-8ca1-48a6-8b26-dca7f2dacebf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aL3IWZpdZQzm",
+        "outputId": "88fd63e5-8ca1-48a6-8b26-dca7f2dacebf"
       },
       "outputs": [
         {
@@ -142,11 +142,11 @@
       "cell_type": "code",
       "execution_count": 7,
       "metadata": {
-        "id": "EtA74Nw0ZQzn",
-        "outputId": "000a5af0-26b8-433f-efb8-7d6e7b9492e0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EtA74Nw0ZQzn",
+        "outputId": "000a5af0-26b8-433f-efb8-7d6e7b9492e0"
       },
       "outputs": [
         {
@@ -179,11 +179,11 @@
       "cell_type": "code",
       "execution_count": 10,
       "metadata": {
-        "id": "IccKntUYZQzo",
-        "outputId": "200505b8-462b-49b8-ec00-70d6d5750a85",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "IccKntUYZQzo",
+        "outputId": "200505b8-462b-49b8-ec00-70d6d5750a85"
       },
       "outputs": [
         {
@@ -205,11 +205,11 @@
       "cell_type": "code",
       "execution_count": 11,
       "metadata": {
-        "id": "38dP7etuZQzo",
-        "outputId": "fdd63a65-0e87-4f49-feac-5dcc6a494a4d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "38dP7etuZQzo",
+        "outputId": "fdd63a65-0e87-4f49-feac-5dcc6a494a4d"
       },
       "outputs": [
         {
@@ -240,12 +240,12 @@
       "cell_type": "code",
       "execution_count": 12,
       "metadata": {
-        "id": "ov4GSRHIZQzp",
-        "outputId": "89265210-c0c4-481b-ce41-fe03d9427634",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 147
-        }
+        },
+        "id": "ov4GSRHIZQzp",
+        "outputId": "89265210-c0c4-481b-ce41-fe03d9427634"
       },
       "outputs": [
         {
@@ -288,11 +288,11 @@
       "cell_type": "code",
       "execution_count": 14,
       "metadata": {
-        "id": "Yx6HF4jOZQzp",
-        "outputId": "c3bbdfb8-0e6a-4ce4-f4dd-028c7291a2b5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Yx6HF4jOZQzp",
+        "outputId": "c3bbdfb8-0e6a-4ce4-f4dd-028c7291a2b5"
       },
       "outputs": [
         {
@@ -334,11 +334,11 @@
       "cell_type": "code",
       "execution_count": 16,
       "metadata": {
-        "id": "jbMCKgPOZQzq",
-        "outputId": "fb20eaaf-372c-4d12-8668-e15e0418bb25",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jbMCKgPOZQzq",
+        "outputId": "fb20eaaf-372c-4d12-8668-e15e0418bb25"
       },
       "outputs": [
         {
@@ -360,11 +360,11 @@
       "cell_type": "code",
       "execution_count": 17,
       "metadata": {
-        "id": "rVXfa4kvZQzr",
-        "outputId": "a191f57f-ccf4-44b4-c671-4dd6c0078e93",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rVXfa4kvZQzr",
+        "outputId": "a191f57f-ccf4-44b4-c671-4dd6c0078e93"
       },
       "outputs": [
         {
@@ -395,11 +395,11 @@
       "cell_type": "code",
       "execution_count": 18,
       "metadata": {
-        "id": "TVdbtLBsZQzr",
-        "outputId": "8f36cb69-4686-449a-9a3b-58f6fafc305e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "TVdbtLBsZQzr",
+        "outputId": "8f36cb69-4686-449a-9a3b-58f6fafc305e"
       },
       "outputs": [
         {
@@ -430,11 +430,11 @@
       "cell_type": "code",
       "execution_count": 19,
       "metadata": {
-        "id": "C2A6hgXMZQzr",
-        "outputId": "04434161-5761-423a-c264-7b6fdaea73b9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "C2A6hgXMZQzr",
+        "outputId": "04434161-5761-423a-c264-7b6fdaea73b9"
       },
       "outputs": [
         {
@@ -456,11 +456,11 @@
       "cell_type": "code",
       "execution_count": 21,
       "metadata": {
-        "id": "XFjT3WeBZQzr",
-        "outputId": "cc62fcd8-45f8-4c96-9b4e-e0139be8d06e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XFjT3WeBZQzr",
+        "outputId": "cc62fcd8-45f8-4c96-9b4e-e0139be8d06e"
       },
       "outputs": [
         {
@@ -482,11 +482,11 @@
       "cell_type": "code",
       "execution_count": 22,
       "metadata": {
-        "id": "LPE6t70EZQzs",
-        "outputId": "e9185c41-aa8d-49aa-a3a5-11c3ac486f4a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LPE6t70EZQzs",
+        "outputId": "e9185c41-aa8d-49aa-a3a5-11c3ac486f4a"
       },
       "outputs": [
         {
@@ -517,11 +517,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
-        "id": "6-1_AcbWZQzs"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6-1_AcbWZQzs",
+        "outputId": "69f34e45-b57f-4c8d-ba88-8babfc8952f4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "np.float64(nan)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ],
       "source": [
         "b.sum()"
       ]
@@ -541,22 +556,52 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
-        "id": "cJ8zn8yZZQzs"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cJ8zn8yZZQzs",
+        "outputId": "c07087e4-3310-4e99-cca7-67bba945d7c3"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "np.True_"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ],
       "source": [
         "np.isnan(np.nan)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
-        "id": "G0kP1TqKZQzs"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "G0kP1TqKZQzs",
+        "outputId": "96b2406f-b8c9-4817-e56d-7996b721ca44"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "np.True_"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ],
       "source": [
         "np.isinf(np.inf)"
       ]
@@ -572,11 +617,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
-        "id": "gVcRkS3oZQzt"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gVcRkS3oZQzt",
+        "outputId": "02d7dfaa-4ca7-41c6-8773-bd256c82c4aa"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(np.False_, np.False_)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ],
       "source": [
         "np.isfinite(np.nan), np.isfinite(np.inf)"
       ]
@@ -592,34 +652,79 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {
-        "id": "IIVnDInJZQzt"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IIVnDInJZQzt",
+        "outputId": "99a08e60-c38e-4222-ed3c-ef439656ba36"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([False, False, False,  True, False, False])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ],
       "source": [
         "np.isnan(np.array([1, 2, 3, np.nan, np.inf, 4]))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {
-        "id": "IImVScd6ZQzu"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IImVScd6ZQzu",
+        "outputId": "e1a27410-f8fc-4361-c1e3-8469f81334d2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([False, False, False, False,  True, False])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ],
       "source": [
         "np.isinf(np.array([1, 2, 3, np.nan, np.inf, 4]))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {
         "scrolled": true,
-        "id": "rpniNmp3ZQz1"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rpniNmp3ZQz1",
+        "outputId": "1b328ced-ae1f-43c2-dec8-0757496c9792"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ True,  True,  True, False, False,  True])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ],
       "source": [
         "np.isfinite(np.array([1, 2, 3, np.nan, np.inf, 4]))"
       ]
@@ -648,7 +753,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {
         "id": "i2nXHAK6ZQz1"
       },
@@ -659,11 +764,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
-        "id": "Dh3xFrSjZQz2"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Dh3xFrSjZQz2",
+        "outputId": "c4d272ce-46cd-4b49-ec2d-31d85ef6ac27"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1., 2., 3., 4.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ],
       "source": [
         "a[~np.isnan(a)]"
       ]
@@ -679,11 +799,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
-        "id": "dKHAqW4xZQz2"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dKHAqW4xZQz2",
+        "outputId": "cf7dedfe-034a-4c79-de5c-8482080b5733"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1., 2., 3., 4.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ],
       "source": [
         "a[np.isfinite(a)]"
       ]
@@ -699,23 +834,53 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "metadata": {
-        "id": "GqJiEyNWZQz2"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GqJiEyNWZQz2",
+        "outputId": "f5facefc-bb4e-4859-bb10-7a2f4f27095f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "np.float64(10.0)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ],
       "source": [
         "a[np.isfinite(a)].sum()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "metadata": {
         "scrolled": true,
-        "id": "WBCxajA0ZQz3"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WBCxajA0ZQz3",
+        "outputId": "9b1f6d91-9064-4be7-fcd6-3eb800426e82"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "np.float64(2.5)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ],
       "source": [
         "a[np.isfinite(a)].mean()"
       ]
